# ModelInquisitor

./: .gitignore  .gitmodules  README.md  main.py  pyproject.toml
.pytest-tmp/: test_mcrl2_toolchain_reports_fcurrent  test_mcrl2_toolchain_verifies_current  test_trace_verifier_reports_nocurrent
.pytest-tmp/test_mcrl2_toolchain_reports_f0/: missing_eir_communication.mcrl2
.pytest-tmp/test_mcrl2_toolchain_reports_f1/: raw_request_send_exposed.mcrl2
.pytest-tmp/test_mcrl2_toolchain_verifies_0/: claim_002_deadlock_freedom.pbes  claim_003_action_preservation.pbes  claim_004_action_preservation.mcf  claim_006_action_preservation.pbes  claim_008_action_preservation.pbes  claim_009_action_preservation.mcf  claim_009_action_preservation.pbes  claim_010_action_preservation.mcf  claim_014_causality.mcf  claim_014_causality.pbes  claim_016_causality.pbes  claim_017_causality.mcf  claim_018_causality.mcf  claim_019_causality.pbes  claim_020_necessary_response.pbes  claim_021_necessary_response.mcf  claim_021_necessary_response.pbes  claim_022_necessary_response.pbes  claim_023_necessary_response.pbes  claim_024_necessary_response.pbes  claim_025_necessary_response.pbes  claim_026_interleaving_no_artificial_ordering.pbes  claim_028_join_no_early_join.pbes  claim_029_join_join_reachable_after_all_branches.pbes  claim_030_join_exactly_once_branch_completion_before_join.pbes  claim_031_interleaving_no_artificial_ordering.mcf  claim_032_interleaving_branch_co_occurrence.mcf  (+16 more)
ModelInquisitor/: __init__.py
docs/: implemented.md  next-steps.md
tests/: test_model_inquisitor.py
(+115 files in other folders)
